[project]
name = "file_converter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "python-magic>=0.4.27",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
